--- a/src/content/posts/xx-strava-test.mdx
+++ b/src/content/posts/xx-strava-test.mdx
@@ -1,9 +1,9 @@
 ---
-title: Strava Test
+title: Mdx Test
 draft: true
-slug: strava-test
-pubDate: 2024-05-31
-description: 'Testing a strava embed component '
+slug: mdx-test
+pubDate: 2024-06-05
+description: 'Testing components'
 postImage:
   src: '../post_images/34-old-siteRIGHT.jpg'
   alt: 'screenshot of old website with a TNT block overlayed'
@@ -11,12 +11,9 @@ socialImage: '/social_images/34-old-new-site.jpg'
 tags: ['astro', 'gatsby', 'build', 'design', 'code', 'tech']
 ---
 
-import BlogPie from '/src/components/react/blogging/piechart.jsx'
-import Strava from '/src/components/other/Strava.astro'
 
+import Fire from '/src/components/other/Fire.astro'
 
-<BlogPie client:visible />
+<Fire mapAlign="imageLeft"/>
 I won't share names in this post but I can tell you we've had **4 individuals who've crossed the line at all 20 events** at The Great Field. According to their parkrun profiles two of those four were brand new to parkrun at our first event and have so far (in terms of parkrun attendance) only ever run with us, which is a most impressive streak indeed! 
 
-
-<Strava stravaClass="imageFull" activity="11443875376" />
