--- a/src/content/posts/xx-strava-test.mdx
+++ b/src/content/posts/xx-strava-test.mdx
@@ -12,8 +12,8 @@ tags: ['astro', 'gatsby', 'build', 'design', 'code', 'tech']
 ---
 
 
-import Fire from '/src/components/other/Fire.astro'
+import Strava from '/src/components/other/Strava.astro'
 
-<Fire mapAlign="imageLeft"/>
+<Strava stravaClass="imageFull" activity="11443875376" />
 I won't share names in this post but I can tell you we've had **4 individuals who've crossed the line at all 20 events** at The Great Field. According to their parkrun profiles two of those four were brand new to parkrun at our first event and have so far (in terms of parkrun attendance) only ever run with us, which is a most impressive streak indeed! 
 
