updating pie chart

--- a/src/content/posts/35-blogging-about-not-blogging.mdx
+++ b/src/content/posts/35-blogging-about-not-blogging.mdx
@@ -11,7 +11,7 @@ socialImage: '/social_images/35-blogging-cover.jpg'
 tags: ['blogging', 'writing', 'dataviz', 'excuses']
 ---
 
-import BlogPie from '/src/components/react/blogging/piechart.jsx'
+import BloggingChart from '/src/components/other/BloggingChart.astro'
 
 This post was inspired by Jukesie’s post - [Introducing bloggers about blogging](https://digitalbydefault.com/2024/05/12/introducing-bloggers-about-blogging/)
 
@@ -23,7 +23,7 @@ I find writing hard. I’ve increasingly become convinced I have some form of dy
 
 I thought it'd be fun to spend a few minutes reflecting on my writing process and what takes me the most time in the hope that it might help me unblock the reasons I’m not blogging more frequently. The less-than-scientific results of this exercise are visualised below.
 
-<BlogPie client:visible />
+<BloggingChart chartAlign="pieFull" />
 
 A pie chart wasn't really needed was it? no...but I did enjoy making it!
 
