--- a/src/content/posts/4--wk1-be-more-like-robbie.mdx
+++ b/src/content/posts/4--wk1-be-more-like-robbie.mdx
@@ -3,7 +3,7 @@ title: Week1 - Be more like Robbie
 draft: false
 slug: wk1-be-more-like-robbie
 pubDate: 2019-03-15
-description: 'the first of some very occassional weeknotes'
+description: 'I share highlights from the week: valuable family time, engaging community practice sessions, and progress in my data visualization studies.'
 postImage:
   src: '../post_images/kermitLEFT.gif'
   alt: 'kermit the frog at the typewriter'
