--- a/src/content/posts/13--TGF-data-dive.mdx
+++ b/src/content/posts/13--TGF-data-dive.mdx
@@ -3,7 +3,7 @@ title: TGF parkrun data dive
 draft: false
 slug: TGF-data-dive
 pubDate: 2022-03-19
-description: 'A little weekend project looking at the data from the first 20 events of The Great Field parkrun'
+description: 'Analyzing data from The Great Field parkrun, uncovering trends and insights from the first 20 events.'
 postImage:
   src: '../post_images/tgf_busesRIGHT.jpg'
   alt: 'stuart run directing at parkrun'
