--- a/src/content/posts/14--choropleth-experiments.mdx
+++ b/src/content/posts/14--choropleth-experiments.mdx
@@ -3,7 +3,7 @@ title: Choropleth Experiments
 draft: false
 slug: choropleth-experiments
 pubDate: 2022-04-11
-description: "One man's experiments in data, maps and the world wide web."
+description: "Experiments in data visualization, exploring maps, coding, and the representation of geographic information."
 postImage:
   src: '../post_images/14-choropleth.jpg'
   alt: 'a placeholder image saying hello stu'
