--- a/src/content/posts/35-blogging-about-not-blogging.mdx
+++ b/src/content/posts/35-blogging-about-not-blogging.mdx
@@ -3,7 +3,7 @@ title: Blogging about not blogging
 draft: false
 slug: blogging-about-not-blogging
 pubDate: 2024-05-31T18:25:00
-description: 'Blogging about not blogging and thinking out loud about some of the things that get in my way'
+description: 'Discussing obstacles to consistent blogging and brainstorming strategies to overcome them while reflecting on the creative process.'
 postImage:
   src: '../post_images/35-blogging_cover.jpg'
   alt: 'screenshot of old website with a TNT block overlayed'
