--- a/src/content/posts/38-tgf-visitors.mdx
+++ b/src/content/posts/38-tgf-visitors.mdx
@@ -13,4 +13,4 @@ tags: ['dataviz', 'maps', 'parkrun', 'data']
 
 import VisitorsMap from '/src/components/for_posts/TGF-VisitorsMap.astro'
 
-<VisitorsMap mapAlign="imageFull" />
+<VisitorsMap mapAlign="mapFull" />
