--- a/src/content/posts/38-tgf-visitors.mdx
+++ b/src/content/posts/38-tgf-visitors.mdx
@@ -19,7 +19,7 @@ I said I was going to play with some data, and I didn’t want to disappoint, so
 
 The Great Field parkrun is now over two years old. This map has been drawn using data from our first 135 events—it doesn’t include data from our Junior parkrun. Over these 135 events, we’ve been joined by approximately **6391 unique runners and volunteers**. It’s only an approximate number because each week, we’ll have a small handful of participants who have either not registered or not remembered their parkrun barcode. In each athlete or volunteer’s online profile is an option to set a ‘home parkrun’. 
 
-**On this map, each orange circle represents the home parkrun location for every unique athlete or volunteer participating in the Great Field parkrun. The number in each circle represents the total number of unique athletes and volunteers from each location.** 
+**On this map, each orange circle represents the home parkrun location for every unique athlete or volunteer participating in the Great Field parkrun. The number in each circle represents the total number of unique athletes and volunteers from each location who have visited us.** 
 
 **The blue circle is the location of the Great Field parkrun; we have 1183 people who call this home! (myself included)**
 
