--- a/src/content/posts/38-tgf-visitors.mdx
+++ b/src/content/posts/38-tgf-visitors.mdx
@@ -27,5 +27,5 @@ There were about 7 or 8 records whose home run no longer is an active event, whi
 
 The rest of the number comprises **5137 parkrunners representing 535 different UK locations**. Unsuprisingly a good number of those ahtletes are visitors from other parkruns nearby (Weymouth, Yeovil, Bridport, Upton park, Poole etc) but you can see from the map that there are plenty from further afield! in fact we’ve also had 71 folks who come from other parkrun global territories — 45 of those from Australia! 🦘🇦🇺
 
-This data isn’t going to be 100% accurate. Many people won’t have updated their ‘home parkrun’ since they initially registered, and ultimately, people can choose to lie if they want. Still, given that we speak to our visitors in real life at every event, I’m pretty sure most inaccuracies are small. Seeing just how many people have visited our little community-powered event and where they've come from has been both fun and mind-boggling! Making the map was also a nice fun little exercise. I'll return soon with some parkrun related data analysis.
+This data isn’t going to be 100% accurate. Many people won’t have updated their ‘home parkrun’ since they initially registered, and ultimately, people can choose to lie if they want. Still, given that we speak to our visitors in real life at every event, I’m pretty sure most inaccuracies are small. Seeing just how many people have visited our little community-powered event and where they've come from has been both fun and mind-boggling! Making the map was also a nice fun little exercise. I'm sure I'll return soon with more TGF parkrun related data nerdery.
 
